@@ -1,3 +1,9 @@
+Thu Mar  4 08:03:51 UTC 2010  Marcel Smit  <msmit@remedy.nl>
+
+        * TAO_IDL/be/be_codegen.cpp:
+          Changed path /impl/ndds to /impl/dds or
+          /impl/dds/ndds.
+
 Thu Mar  4 07:50:54 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * NEWS:
